--- a/WebApplication4/WebApplication4/Views/Evento/Tarifas.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Tarifas.cshtml
@@ -5,6 +5,7 @@
 
 <div class="tab-pane fade in container" id="tarifas">
     <h3>Funciones</h3>
+    <h4>@ViewBag.MensajeError</h4>
     <div class="container">
         <br>
         <div class="row">
