--- a/WebApplication4/WebApplication4/Views/Evento/ExtrasEvento.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/ExtrasEvento.cshtml
@@ -4,18 +4,19 @@
 
 }
 <div class="tab-pane fade in container" id="extras">
-    @using (Html.BeginForm("ExtrasEveto","Evento",FormMethod.Post))
+    @using (Html.BeginForm("ExtrasEvento", "Evento", FormMethod.Post))
     {
         <div class="container">
             <br>
             <div class="row">
                 <div class="form-group">
-                    @Html.LabelFor(c => c.MaxReservas, new { @class="control-label col-md-2"})
+                    @Html.LabelFor(c => c.MaxReservas, new { @class = "control-label col-md-2" })
                     <div class="col-md-2">
-                        @Html.TextBoxFor(c => c.MaxReservas, new { @class="form-control" })
+                        @Html.TextBoxFor(c => c.MaxReservas, new { @class = "form-control" })
                     </div>
                 </div>
-            </div>
+                @Html.ValidationMessageFor(model => model.MaxReservas)
+            </div><br />
             <div class="row">
                 <div class="form-group">
                     @Html.LabelFor(c => c.PuntosToCliente, new { @class = "control-label col-md-2" })
@@ -23,17 +24,19 @@
                         @Html.TextBoxFor(c => c.PuntosToCliente, new { @class = "form-control" })
                     </div>
                 </div>
+                @Html.ValidationMessageFor(model => model.PuntosToCliente)
             </div>
             <div class="row">
                 <div class="form-group">
                     @Html.LabelFor(c => c.Ganancia, new { @class = "control-label col-md-2" })
                     <div class="col-md-2">
                         <div class="input-group">
-                            @Html.TextBoxFor(c => c.Ganancia, new { @class = "form-control"})
+                            @Html.TextBoxFor(c => c.Ganancia, new { @class = "form-control" })
                             <span class="input-group-addon" id="ganancia">%</span>
                         </div>
                     </div>
                 </div>
+                @Html.ValidationMessageFor(model => model.Ganancia)
             </div>
             <div class="row">
                 <div class="form-group">
@@ -41,10 +44,11 @@
                     <div class="col-md-2">
                         <div class="input-group">
                             <span class="input-group-addon" id="cancelar">S/.</span>
-                            @Html.TextBoxFor(c => c.Ganancia, new { @class = "form-control"})
+                            @Html.TextBoxFor(c => c.MontFijoVentEnt, new { @class = "form-control" })
                         </div>
                     </div>
                 </div>
+                @Html.ValidationMessageFor(model => model.MontFijoVentEnt)
             </div>
             <div class="row">
                 <div class="form-group">
@@ -56,6 +60,7 @@
                         </div>
                     </div>
                 </div>
+                @Html.ValidationMessageFor(model => model.PenCancelacion)
             </div>
             <div class="row">
                 <div class="form-group">
@@ -67,6 +72,7 @@
                         </div>
                     </div>
                 </div>
+                @Html.ValidationMessageFor(model => model.PenPostergacion)
             </div>
             <div class="row">
                 <div class="form-group">
@@ -75,7 +81,6 @@
                         @Html.TextBoxFor(m => m.ImageEvento, new { type = "file", @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.ImageEvento)
                     </div>
-
                 </div>
             </div>
             <div class="row">
@@ -98,12 +103,12 @@
             </div>
             <div class="row">
                 <div class="col-md-4 col-md-offset-2">
-                    <div class="checkbox">
-                        @Html.LabelFor(c=> c.PermitirReservasWeb, new { @class = "control-label col-md-2" })
+                    <div>
+                        @Html.LabelFor(c => c.PermitirReservasWeb, new { @class = "control-label" })
                         @Html.CheckBoxFor(c => c.PermitirReservasWeb)
                     </div>
-                    <div class="checkbox">
-                        @Html.LabelFor(c=> c.PermitirBoletoElectronico, new { @class = "control-label col-md-2" })
+                    <div>
+                        @Html.LabelFor(c => c.PermitirBoletoElectronico, new { @class = "control-label" })
                         @Html.CheckBoxFor(c => c.PermitirBoletoElectronico)
                     </div>
                 </div>
