--- a/WebApplication4/WebApplication4/Views/Evento/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Index.cshtml
@@ -1,16 +1,7 @@
-﻿
-@using WebApplication4.Models;
+﻿@using WebApplication4.Models;
 @using PagedList;
-
 @using PagedList.Mvc;
-
-
-
-
-
-
 @model PagedList.IPagedList<Eventos>
-
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
@@ -55,18 +46,13 @@
 
                 @using (Html.BeginForm("Index", "Evento", FormMethod.Get, new { id = "search" }))
                 {
-
                     <div class="form-group">
                         <div class="input-group">
-
                             @Html.TextBox("nombre", "", new { placeholder = "INGRESE EVENTO", @class = "form-control" })
                             <span class="input-group-btn"><a id="btn-search" class="btn btn-primary" onclick="submitSearch()"><span class="glyphicon glyphicon-search"></span></a></span>
                         </div>
                     </div>
-
-
                 }
-
             </div>
         </div>
     </div>
@@ -77,23 +63,14 @@
                 <!--formulario EN LINEA-->
                 @using (Html.BeginForm("Index", "Evento", FormMethod.Get, new { id = "adv-search", @class = "form-inline" }))
                 {
-
                     if (this.Request.QueryString.Count != 0)
                     {
-
                         if (this.Request.QueryString.AllKeys.Contains("nombre"))
                         {
-
                             nombre = this.Request.QueryString["nombre"];
-
                         }
-
                     }
-
                     @Html.Hidden("nombre", nombre, new { id = "adv-nomb" });
-
-
-
                     <div class="form-group ">
                         <div class="form-group ">
                             <div class="input-group">
@@ -102,39 +79,26 @@
                                 <input id="fech_ini" name="fech_ini" type="date" class="form-control">
                             </div>
                         </div>
-
-
                         <div class="form-group">
                             <div class="input-group">
                                 <span class="input-group-addon">Hasta:</span>
                                 <input id="fech_fin" onchange="changeDate2()" name="fech_fin" type="date" class="form-control">
                             </div>
                         </div>
-
-
-
-
                         <div class="form-group ">
-
                             <select name="idCategoria" id="idCategoria" data-val="true" onchange="cambioCat()" class="form-control col-lg-2">
                                 <option value="">Categorias</option>
-
-
                                 @foreach (var categoria in ViewBag.categorias)
                                 {
                                     <option value=@categoria.Value> @categoria.Text</option>
                                 }
-
                             </select>
-
-
                         </div>
                         <div class="form-group ">
                             <select name="idSubCat" id="idSubCat" data-val="true" class="form-control col-lg-2">
                             </select>
                         </div>
                         <div class="form-group">
-
                             <select name="idRegion" id="idRegion" data-val="true" class="form-control col-lg-2" onchange="cambio()">
                                 <option value="">Departamentos</option>
 
@@ -142,18 +106,15 @@
                                 {
                                     <option value=@departamento.Value> @departamento.Text</option>
                                 }
-
                             </select>
                             <div class="form-group">
                                 <a id="btn-adv-search" onclick="submitAdvSearch() " class="btn btn-primary ">Buscar <span class="glyphicon glyphicon-search"></span></a>
                             </div>
-
                         </div>
                     </div>
                 }
             </div>
         </div>
-
     </div>
     <br>
 
@@ -171,14 +132,10 @@
                             @Html.ActionLink("Tipo", "Index", new { orden = ViewBag.orden, filtro = ViewBag.filtro })
                         </th>
                         <th>
-
                             @Html.ActionLink("Categoria", "Index", new { categoria = ViewBag.orden, filtro = ViewBag.filtro })
-
                         </th>
                         <th>
-
                             @Html.ActionLink("Organizador", "Index", new { organizador = ViewBag.orden, filtro = ViewBag.filtro })
-
                         </th>
                         <th>
                             Estado
@@ -188,15 +145,11 @@
                 <tbody>
                     @foreach (var evento in Model)
                     {
-
                         <tr id="@evento.codigo" onclick="seleccionaFilaTabla(this)">
                             <td>@evento.codigo</td>
                             <td>@evento.nombre</td>
-
                             @{
                                 Categoria cat = db.Categoria.Where(c => c.idCategoria == @evento.idCategoria).First();
-
-
                             }
 
                             <td>@cat.nombre</td>
@@ -211,59 +164,34 @@
                                 }
                 </tbody>
             </table>
-
             Pagina @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
             @Html.PagedListPager(Model, page => Url.Action("Index", new { page, orden = ViewBag.ordenActual, filtroActual = ViewBag.filtroActual }));
 
-
-
         </div>
-
-
     </div>
-
 </div>
 <script>
-
     $(document).ready(function () {
         $.validator.addMethod("greaterThan", function (value, element, params) {
-
             console.log(element);
             console.log(value);
             console.log(params);
-
             if (!/Invalid|NaN/.test(new Date(value))) {
                 return new Date(value) > new Date($(params).val());
             }
-
             return isNaN(value) && isNaN($(params).val()) || (Number(value) > Number($(params).val()));
         }, 'Must be greater than {0}.');
-
     });
 
-
     function changeDate2() {
-
-
-
         $("#fech_fin").rules('add', { greaterThan: "#fech_ini" })
-
-
-
-
     }
 
-
     function submitSearch() {
-
-
         $("#search").submit();
     }
 
-
     function submitAdvSearch() {
-
-
         /*var input = $("<input>")
                        .attr("type", "hidden")
                         .attr("name", "nombre").val(($("#nombre").val() != "") ? $("#nombre").val() : "");
@@ -271,14 +199,11 @@
         $("#adv-search").submit();
     }
 
-
-
     function cambioCat() {
         fillCombo("idSubCat", $("#idCategoria").val(), "/Services/Subcategoria/", "Subcategorias");
     }
 
     function fillCombo(idCombo, value, linkUrl, optlabel) {
-
         $("#" + idCombo).empty();
         $("#" + idCombo).append("<option value=''>" + optlabel + "</option>")
 
@@ -303,9 +228,6 @@
         });
     }
 
-
-
-
     function seleccionaFilaTabla(x) {
         if (document.getElementsByClassName("trselected").length > 0) {
             var element = document.getElementsByClassName("trselected");
@@ -315,6 +237,7 @@
         elem.value = x.cells[0].innerHTML;
         x.className = "trselected";
     }
+
     function redirigePromocion() {
         var evento = $('#idEventoT').val();
         if (evento != "") {
@@ -324,6 +247,7 @@
             evento = "";
         }
     }
+
     function redirigeAsiento() {
         var evento = $('#idEventoT').val();
         if (evento != "") {
